@@ -3,6 +3,7 @@ Version: 1.6.8
 Date: 6/2/26
   Bugfixes:
     - Fixed biter ramming crash.
+    - Fixed crash when claiming hexes near ungenerated chunks.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.7
 Date: 4/2/26
